# python-prism

./: .gitignore  README.md  pyproject.toml
.github/workflows/: apply-changes.md  python-sync-from-golang-pr.lock.yml  python-sync-from-golang-pr.md
src/python_prism/: __init__.py  main.py
tests/: test_placeholder.py
